--- a/index.html
+++ b/index.html
@@ -211,6 +211,26 @@
                     image: 'https://placehold.co/600x400/a9a9a9/FFFFFF?text=Bakharwal',
                 },
                 {
+                    name: 'Chippiparai',
+                    description: 'A sighthound breed from Tamil Nadu, known for its slender and elegant build. They are excellent hunters and loyal companions.',
+                    image: 'https://placehold.co/600x400/deb887/FFFFFF?text=Chippiparai'
+                },
+                {
+                    name: 'Gaddi Kutta',
+                    description: 'A mastiff-type mountain dog from the Himalayas, used by local shepherds. They are strong, courageous, and known for being gentle giants with their families.',
+                    image: 'https://placehold.co/600x400/2F4F4F/FFFFFF?text=Gaddi+Kutta'
+                },
+                {
+                    name: 'Kanni',
+                    description: 'A rare sighthound breed from Tamil Nadu, related to the Chippiparai. They are known for their loyalty and shy temperament, typically with a black and tan coat.',
+                    image: 'https://placehold.co/600x400/4b3621/FFFFFF?text=Kanni'
+                },
+                {
+                    name: 'Rampur Greyhound',
+                    description: 'A fast and powerful sighthound from the Rampur region of Northern India. They are known for their endurance and were historically used to hunt large game.',
+                    image: 'https://placehold.co/600x400/808080/FFFFFF?text=Rampur+Greyhound'
+                },
+                {
                     name: 'Mixed Breed',
                     description: 'A beautiful dog with a unique heritage from multiple breeds. Mixed breed dogs are often very healthy, intelligent, and have wonderful temperaments.',
                     image: 'https://placehold.co/600x400/9b7d6b/FFFFFF?text=Mixed+Breed',
@@ -250,3 +270,6 @@
     </script>
 </body>
 </html>
+
+
+
