--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <main>
             <!-- NEW: Cover Image Section -->
             <div class="mb-8">
-                <img src="https://images.unsplash.com/photo-1623757433233-3a0338a22146?q=80&w=1200&auto=format&fit=crop" 
-                     alt="A friendly Indian dog looking at the camera" 
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a8/The_Rajapaalayam_Breead_3.png" 
+                     alt="A white Rajapalayam dog" 
                      class="w-full h-64 object-cover rounded-xl shadow-lg"
                      onerror="this.onerror=null;this.src='https://placehold.co/1200x400/9ca3af/ffffff?text=Image+of+a+friendly+dog';">
             </div>
@@ -372,6 +372,7 @@
     </script>
 </body>
 </html>
+
 
 
 
