--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <main>
             <!-- NEW: Cover Image Section -->
             <div class="mb-8">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a8/The_Rajapaalayam_Breead_3.png" 
+                <img src="https://github.com/vishnusreejith/Stray-dog/blob/main/cover%20image.jpeg" 
                      alt="A white Rajapalayam dog" 
                      class="w-full h-64 object-cover rounded-xl shadow-lg"
                      onerror="this.onerror=null;this.src='https://placehold.co/1200x400/9ca3af/ffffff?text=Image+of+a+friendly+dog';">
@@ -372,6 +372,7 @@
     </script>
 </body>
 </html>
+
 
 
 
