--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <main>
             <!-- NEW: Cover Image Section -->
             <div class="mb-8">
-                <img src="https://raw.githubusercontent.com/YOUR_USERNAME/YOUR_REPOSITORY/main/images%20(1).jpg" 
+                <img src="Screenshot (731).png" 
                      alt="A friendly Indian dog looking at the camera" 
                      class="w-full h-64 object-cover rounded-xl shadow-lg"
                      onerror="this.onerror=null;this.src='https://placehold.co/1200x400/9ca3af/ffffff?text=Image+of+a+friendly+dog';">
@@ -372,6 +372,7 @@
     </script>
 </body>
 </html>
+
 
 
 
